[tool.poetry]
name = "baidu-ultr-features"
version = "0.1.0"
description = ""
authors = ["Philipp Hager <philipp.konstantin.hager@gmail.com>"]
readme = "README.md"
packages = [{include = "baidu_ultr_features"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
transformers = {extras = ["torch"], version = "^4.34.0"}
scikit-learn = "^1.3.1"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
